--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,51 +1,51 @@
 <section class="p-5">
   <a href="<%=welcome_alojamientos_path%>">
-    <h1 class="text-secondary m-4">Alojamientos con Reserva Flexible</h1>
+    <h1 class="text-primary m-4">Alojamientos con Reserva Flexible</h1>
     <div class="row">
       <div class="col-md-4">
-        <div class="card border-primary mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/ec0ba424-73dc-4dbe-8678-2fc60beab5ab/295x200" class="card-img-top" alt="..."></div>
-          <div class="card-body text-primary">
-            <h5 class="card-title text-primary">Hotel Esmeralda</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Hotel Esmeralda</h5>
             <h5 class="card-title">Iquique</h5>
-            <p class="card-text text-primary">$42.477</p>
+            <p class="card-title font-weight-bold text-primary">$42.477</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card border-primary mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/e9fc272c-812e-4088-99d8-ddb0ca244ee0/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-primary">
-            <h5 class="card-title text-primary">Hotel Montecarlo</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Hotel Montecarlo</h5>
             <h5 class="card-title">Viña del Mar</h5>
-            <p class="card-text text-primary">$61.427</p>
+            <p class="card-title font-weight-bold text-primary">$61.427</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card border-primary mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/38ec318f-514d-4b59-a0c7-64e246035379/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-primary">
-            <h5 class="card-title text-primary">Alma del Lago Suites</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Alma del Lago Suites</h5>
             <h5 class="card-title">San Carlos de Bariloche</h5>
-            <p class="card-text text-primary">$148.388</p>
+            <p class="card-title font-weight-bold text-primary">$148.388</p>
           </div>
         </div>
       </div>
     </div>
   </a>
   <a href="<%=welcome_vuelos_path%>">
-    <h1 class="text-success m-4">¡Los Vuelos destacados de hoy!</h1>
+    <h1 class="text-primary m-4">¡Los Vuelos destacados de hoy!</h1>
     <div class="row">
 
       <div class="col-md-4">
 
-        <div class="card border-success mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/0482c496-8db7-4c53-ac19-5b01b83af1aa/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-success">
-            <h5 class="card-title text-success">Vuelos a Nueva York</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Vuelos a Nueva York</h5>
             <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-            <p class="card-text text-success">$236.386</p>
+            <p class="card-title font-weight-bold text-primary">$236.386</p>
           </div>
         </div>
 
@@ -53,12 +53,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-success mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/453c8b2e-b02e-4ec3-97ee-a0e453fe484b/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-success">
-            <h5 class="card-title text-success">Vuelos a Miami</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Vuelos a Miami</h5>
             <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-            <p class="card-text text-success">$230.772</p>
+            <p class="card-title font-weight-bold text-primary">$230.772</p>
           </div>
         </div>
 
@@ -66,12 +66,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-success mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/f174a9f9-9648-4a3b-96ec-032421b18b93/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-success">
-            <h5 class="card-title text-success">Vuelos a Medellín</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Vuelos a Medellín</h5>
             <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-            <p class="card-text text-success">$319.512</p>
+            <p class="card-title font-weight-bold text-primary">$319.512</p>
           </div>
         </div>
 
@@ -80,17 +80,17 @@
     </div>
   </a>
   <a href="<%=welcome_paquetes_path%>">
-    <h1 class="text-danger m-4">Vuelve a soñar con tu próximo viaje y compra con tranquilidad</h1>
+    <h1 class="text-primary m-4">Vuelve a soñar con tu próximo viaje y compra con tranquilidad</h1>
     <div class="row">
 
       <div class="col-md-4">
 
-        <div class="card border-danger mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/d9993d4f-7dc6-4f13-b360-ac9877ee660a/295x200" class="card-img-top" alt="..."></div>
-          <div class="card-body text-danger">
-            <h5 class="card-title text-danger">Paquetes a Cancún</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Paquetes a Cancún</h5>
             <h5 class="card-title">7 noches</h5>
-            <p class="card-text text-danger">$473.883</p>
+            <p class="card-title font-weight-bold text-primary">$473.883</p>
           </div>
         </div>
 
@@ -98,12 +98,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-danger mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/d780ea07-4acf-42a7-afaf-223dc40c0779/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-danger">
-            <h5 class="card-title text-danger">Paquetes a Nueva York</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Paquetes a Nueva York</h5>
             <h5 class="card-title">9 noches</h5>
-            <p class="card-text text-danger">$606.092</p>
+            <p class="card-title font-weight-bold text-primary">$606.092</p>
           </div>
         </div>
 
@@ -111,12 +111,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-danger mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/c49cd438-0f4e-4c85-a91a-c35343822aa3/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-danger">
-            <h5 class="card-title text-danger">Paquetes a Playa del Carmen</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Paquetes a Playa del Carmen</h5>
             <h5 class="card-title">7 noches</h5>
-            <p class="card-text text-danger">$458.359</p>
+            <p class="card-title font-weight-bold text-primary">$458.359</p>
           </div>
         </div>
 
@@ -125,17 +125,17 @@
     </div>
   </a>
   <a href="<%=welcome_tours_path%>">
-    <h1 class="text-warning m-4">¡Aprovecha Actividades!</h1>
+    <h1 class="text-primary m-4">¡Aprovecha Actividades!</h1>
     <div class="row">
 
       <div class="col-md-4">
 
-        <div class="card border-warning mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/87452c8c-8837-4285-8009-859d0f30223b/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-warning">
-            <h5 class="card-title text-warning">Xcaret</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Xcaret</h5>
             <h5 class="card-title">En Cancún</h5>
-            <p class="card-text text-warning">$58.668</p>
+            <p class="card-title font-weight-bold text-primary">$58.668</p>
           </div>
         </div>
 
@@ -143,12 +143,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-warning mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/4994e2e4-2ff3-4652-b9f0-3734f6724123/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-warning">
-            <h5 class="card-title text-warning">Parque Xcaret Entrada Plus desde Playa del Carmen</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">Parque Xcaret Entrada Plus desde Playa del Carmen</h5>
             <h5 class="card-title">En Playa del Carmen</h5>
-            <p class="card-text text-warning">$108.383</p>
+            <p class="card-title font-weight-bold text-primary">$108.383</p>
           </div>
         </div>
 
@@ -157,12 +157,12 @@
 
       <div class="col-md-4">
 
-        <div class="card border-warning mb-3" style="max-width: 18rem;">
+        <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/9cec0268-848c-4a41-abde-bc95622ee743/400x400" class="card-img-top" alt="..."></div>
-          <div class="card-body text-warning">
-            <h5 class="card-title text-warning">City tour privado PREMIUM por la ciudad de Cartagena</h5>
+          <div class="card-body">
+            <h5 class="card-title font-weight-bold">City tour privado PREMIUM por la ciudad de Cartagena</h5>
             <h5 class="card-title">En Cartagena de Indias</h5>
-            <p class="card-text text-warning">$50.401</p>
+            <p class="card-title font-weight-bold text-primary">$50.401</p>
           </div>
         </div>
 
