--- a/app/views/welcome/tours.html.erb
+++ b/app/views/welcome/tours.html.erb
@@ -1,4 +1,4 @@
-<header class="text-warning p-4">
+<header class="text-primary p-4">
   <h1>¡Aprovecha Actividades!</h1>
 </header>
 
@@ -8,30 +8,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/87452c8c-8837-4285-8009-859d0f30223b/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Xcaret</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Xcaret</h5>
           <h5 class="card-title">En Cancún</h5>
-          <p class="card-text text-warning">$58.668</p>
+          <p class="card-title font-weight-bold text-primary">$58.668</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/b5809693-ec9e-485f-bd14-01b2de48f69e/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Juanillo Vip All Day Tour</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Juanillo Vip All Day Tour</h5>
           <h5 class="card-title">En Punta Cana</h5>
-          <p class="card-text text-warning">$128.703</p>
+          <p class="card-title font-weight-bold text-primary">$128.703</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/f4caf2a9-5098-473c-bca3-50f356d7a60a/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Aviario con entradas, y dia de playa en Playa Tranquila Baru</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Aviario con entradas, y dia de playa en Playa Tranquila Baru</h5>
           <h5 class="card-title">En Cartagena de Indias</h5>
-          <p class="card-text text-warning">$27.244</p>
+          <p class="card-title font-weight-bold text-primary">$27.244</p>
         </div>
       </div>
 
@@ -39,30 +39,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/4994e2e4-2ff3-4652-b9f0-3734f6724123/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Parque Xcaret Entrada Plus desde Playa del Carmen</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Parque Xcaret Entrada Plus desde Playa del Carmen</h5>
           <h5 class="card-title">En Playa del Carmen</h5>
-          <p class="card-text text-warning">$108.383</p>
+          <p class="card-title font-weight-bold text-primary">$108.383</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
-        <div class="card-header"><img src="https://media.staticontent.com/media/pictures/b02e30b6-9972-4105-8de2-86414078f335/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Aventura Xplor</h5>
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header"><img src="https://media.staticontent.com/media/pictures/b02e30b6-9972-4105-8de2-86414078f335/382x258" class="card-img-top" alt="..."></div>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Aventura Xplor</h5>
           <h5 class="card-title">En Cancún</h5>
-          <p class="card-text text-warning">$86.706</p>
+          <p class="card-title font-weight-bold text-primary">$86.706</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/1986bcd0-d4ba-4e37-97f5-e0375dd13969/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Visita a Taxco y Cuernavaca</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Visita a Taxco y Cuernavaca</h5>
           <h5 class="card-title">En Ciudad de Mexico</h5>
-          <p class="card-text text-warning">$32.996</p>
+          <p class="card-title font-weight-bold text-primary">$32.996</p>
         </div>
       </div>
 
@@ -70,30 +70,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/9cec0268-848c-4a41-abde-bc95622ee743/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">City tour privado PREMIUM por la ciudad de Cartagena</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">City tour privado PREMIUM por la ciudad de Cartagena</h5>
           <h5 class="card-title">En Cartagena de Indias</h5>
-          <p class="card-text text-warning">$50.401</p>
+          <p class="card-title font-weight-bold text-primary">$50.401</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/34eef579-a52a-42b4-bcd3-4d0fda61d768/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Tour de Alta Montaña</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Tour de Alta Montaña</h5>
           <h5 class="card-title">En Mendoza</h5>
-          <p class="card-text text-warning">$21.384</p>
+          <p class="card-title font-weight-bold text-primary">$21.384</p>
         </div>
       </div>
 
-      <div class="card border-warning mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/fff314e8-2995-4cef-ab19-d407f4beb1ef/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-warning">
-          <h5 class="card-title text-warning">Visita a bodegas y fábrica de aceite de oliva</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Visita a bodegas y fábrica de aceite de oliva</h5>
           <h5 class="card-title">En Mendoza</h5>
-          <p class="card-text text-warning">$11.262</p>
+          <p class="card-title font-weight-bold text-primary">$11.262</p>
         </div>
       </div>
 
