--- a/app/views/welcome/paquetes.html.erb
+++ b/app/views/welcome/paquetes.html.erb
@@ -1,4 +1,4 @@
-<header class="text-danger p-4">
+<header class="text-primary p-4">
   <h1>Vuelve a soñar con tu próximo viaje y compra con tranquilidad</h1>
 </header>
 
@@ -8,30 +8,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/d9993d4f-7dc6-4f13-b360-ac9877ee660a/295x200" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Cancún</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Cancún</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$473.883</p>
+          <p class="card-title font-weight-bold text-primary">$473.883</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/5ea04bb2-4aed-4935-b6fd-83adc152d152/295x200" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Isla de Pascua</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Isla de Pascua</h5>
           <h5 class="card-title">3 noches</h5>
-          <p class="card-text text-danger">$255.087</p>
+          <p class="card-title font-weight-bold text-primary">$255.087</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/75cadace-042b-429d-9d0f-64247c3aff6f/295x200" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Punta Cana</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Punta Cana</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$603.392</p>
+          <p class="card-title font-weight-bold text-primary">$603.392</p>
         </div>
       </div>
 
@@ -39,30 +39,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/d780ea07-4acf-42a7-afaf-223dc40c0779/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Nueva York</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Nueva York</h5>
           <h5 class="card-title">9 noches</h5>
-          <p class="card-text text-danger">$606.092</p>
+          <p class="card-title font-weight-bold text-primary">$606.092</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/8d0efdc4-38ac-4d12-b54e-a21c9b3583eb/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Cancún</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Cancún</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$473.883</p>
+          <p class="card-title font-weight-bold text-primary">$473.883</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/2423d1b5-d021-42f3-a5b1-63bceb5da062/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Punta Cana</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Punta Cana</h5>
           <h5 class="card-title">6 noches</h5>
-          <p class="card-text text-danger">$578.152</p>
+          <p class="card-title font-weight-bold text-primary">$578.152</p>
         </div>
       </div>
 
@@ -70,30 +70,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/c49cd438-0f4e-4c85-a91a-c35343822aa3/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Playa del Carmen</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Playa del Carmen</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$458.359</p>
+          <p class="card-title font-weight-bold text-primary">$458.359</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/2fa7c160-9c61-4736-a692-56dd79331d28/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a San Andres</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a San Andres</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$498.334</p>
+          <p class="card-title font-weight-bold text-primary">$498.334</p>
         </div>
       </div>
 
-      <div class="card border-danger mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/9fd2019a-f7d2-44e6-b299-be006c778f58/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-danger">
-          <h5 class="card-title text-danger">Paquetes a Rio de Janeiro</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Paquetes a Rio de Janeiro</h5>
           <h5 class="card-title">7 noches</h5>
-          <p class="card-text text-danger">$302.477</p>
+          <p class="card-title font-weight-bold text-primary">$302.477</p>
         </div>
       </div>
 
