--- a/app/views/welcome/vuelos.html.erb
+++ b/app/views/welcome/vuelos.html.erb
@@ -1,4 +1,4 @@
-<header class="text-success p-4">
+<header class="text-primary p-4">
   <h1>¡Los Vuelos destacados de hoy!</h1>
 </header>
 
@@ -8,30 +8,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/0482c496-8db7-4c53-ac19-5b01b83af1aa/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Nueva York</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Nueva York</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$236.386</p>
+          <p class="card-title font-weight-bold text-primary">$236.386</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/077effea-2bb4-4748-a633-be8929bb75d4/295x200" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Cancún</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Cancún</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$231.572</p>
+          <p class="card-title font-weight-bold text-primary">$231.572</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/49ad65aa-3587-41ef-ba69-46fab3865d0d/295x200" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
+        <div class="card-body">
           <h5 class="card-title text-sucess">Vuelos a Los Angeles</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$241.421</p>
+          <p class="card-title font-weight-bold text-primary">$241.421</p>
         </div>
       </div>
 
@@ -39,30 +39,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/453c8b2e-b02e-4ec3-97ee-a0e453fe484b/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Miami</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Miami</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$230.772</p>
+          <p class="card-title font-weight-bold text-primary">$230.772</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/aa8fa41a-fc2a-47c5-b7ce-1d534211ca65/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Frankfurt</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Frankfurt</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$551.620</p>
+          <p class="card-title font-weight-bold text-primary">$551.620</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/5c804847-8b9e-4f22-b2c4-c0a05f2f7e47/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Cartagena de Indias</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Cartagena de Indias</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$393.531</p>
+          <p class="card-title font-weight-bold text-primary">$393.531</p>
         </div>
       </div>
 
@@ -70,30 +70,30 @@
 
     <div class="col-md-4">
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/f174a9f9-9648-4a3b-96ec-032421b18b93/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Medellín</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Medellín</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$319.512</p>
+          <p class="card-title font-weight-bold text-primary">$319.512</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/811a7b53-a16d-4045-877a-5b3f2d904939/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-success">Vuelos a Madrid</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Madrid</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success">$533.201</p>
+          <p class="card-title font-weight-bold text-primary">$533.201</p>
         </div>
       </div>
 
-      <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card border-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header"><img src="https://media.staticontent.com/media/pictures/78855af1-5ce3-4275-bfa9-691295f652ac/400x400" class="card-img-top" alt="..."></div>
-        <div class="card-body text-success">
-          <h5 class="card-title text-successS">Vuelos a Caracas</h5>
+        <div class="card-body">
+          <h5 class="card-title font-weight-bold">Vuelos a Caracas</h5>
           <h5 class="card-title">Partiendo desde Santiago de Chile</h5>
-          <p class="card-text text-success"></p>
+          <p class="card-title font-weight-bold text-primary"></p>
         </div>
       </div>
 
