--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,9 @@
   <a href="<%=welcome_alojamientos_path%>">
     <h1 class="text-primary m-4">Alojamientos con Reserva Flexible</h1>
     <div class="row">
+
       <div class="col-md-4">
+
         <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/ec0ba424-73dc-4dbe-8678-2fc60beab5ab/295x200" class="card-img-top" alt="..."></div>
           <div class="card-body">
@@ -12,7 +14,9 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
+
         <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/e9fc272c-812e-4088-99d8-ddb0ca244ee0/400x400" class="card-img-top" alt="..."></div>
           <div class="card-body">
@@ -22,7 +26,9 @@
           </div>
         </div>
       </div>
+
       <div class="col-md-4">
+
         <div class="card border-secondary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="https://media.staticontent.com/media/pictures/38ec318f-514d-4b59-a0c7-64e246035379/400x400" class="card-img-top" alt="..."></div>
           <div class="card-body">
@@ -32,6 +38,7 @@
           </div>
         </div>
       </div>
+      <p>Ver mas <i class="fas fa-angle-double-right"></i></p>
     </div>
   </a>
   <a href="<%=welcome_vuelos_path%>">
@@ -48,7 +55,6 @@
             <p class="card-title font-weight-bold text-primary">$236.386</p>
           </div>
         </div>
-
       </div>
 
       <div class="col-md-4">
@@ -61,7 +67,6 @@
             <p class="card-title font-weight-bold text-primary">$230.772</p>
           </div>
         </div>
-
       </div>
 
       <div class="col-md-4">
@@ -74,8 +79,8 @@
             <p class="card-title font-weight-bold text-primary">$319.512</p>
           </div>
         </div>
-
       </div>
+      <p>Ver mas <i class="fas fa-angle-double-right"></i></p>
 
     </div>
   </a>
@@ -93,7 +98,6 @@
             <p class="card-title font-weight-bold text-primary">$473.883</p>
           </div>
         </div>
-
       </div>
 
       <div class="col-md-4">
@@ -106,7 +110,6 @@
             <p class="card-title font-weight-bold text-primary">$606.092</p>
           </div>
         </div>
-
       </div>
 
       <div class="col-md-4">
@@ -119,8 +122,8 @@
             <p class="card-title font-weight-bold text-primary">$458.359</p>
           </div>
         </div>
-
       </div>
+      <p>Ver mas <i class="fas fa-angle-double-right"></i></p>
 
     </div>
   </a>
@@ -138,7 +141,6 @@
             <p class="card-title font-weight-bold text-primary">$58.668</p>
           </div>
         </div>
-
       </div>
 
       <div class="col-md-4">
@@ -151,8 +153,6 @@
             <p class="card-title font-weight-bold text-primary">$108.383</p>
           </div>
         </div>
-
-
       </div>
 
       <div class="col-md-4">
@@ -165,8 +165,8 @@
             <p class="card-title font-weight-bold text-primary">$50.401</p>
           </div>
         </div>
-
       </div>
+      <p>Ver mas <i class="fas fa-angle-double-right"></i></p>
 
     </div>
   </a>
