--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,28 @@
-<div class="px-5">
+<div class="px-5 pb-5">
   <h2>Registrate</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
+
+    <div class="field">
+      <%= f.label :nombres %><br />
+      <%= f.text_field :name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :apellidos %><br />
+      <%= f.text_field :lastname %>
+    </div>
+
+    <div class="field">
+      <%= f.label :cumpleaños %><br />
+      <%= f.date_field :birthday %>
+    </div>
+
+    <div class="field">
+      <%= f.label :pais %><br />
+      <%= f.select :country, ['Chile', 'Argentina', 'Peru'] %>
+    </div>
 
     <div class="field">
       <%= f.label :email %><br />
@@ -10,7 +30,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :password %>
+      <%= f.label :contraseña %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
@@ -18,12 +38,12 @@
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation %><br />
+      <%= f.label :confirmacion_de_contraseña %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Enviar" %>
     </div>
   <% end %>
 
