--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,88 +11,12 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="<%=root_path%>">Go Beyond</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="<%=welcome_alojamientos_path%>"><i class="fas fa-bed"></i>Alojamientos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%=welcome_vuelos_path%>"><i class="fas fa-plane-departure"></i>Vuelos</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="<%=welcome_paquetes_path%>"><i class="fas fa-suitcase"></i>Paquetes</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="<%=welcome_tours_path%>"><i class="fas fa-map-marked"></i>Tours</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%=scrapbooks_path%>"><i class="fas fa-camera-retro"></i>Scrapbooks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href=""><i class="fas fa-sd-card"></i>Guarda tus recuerdos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%=blogs_path%>"><i class="fas fa-book"></i>Blog</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <% if user_signed_in? %>
-          <%= link_to edit_user_registration_path %>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <%= link_to('Salir', destroy_user_session_path, :method=>'delete') %>
-            </a>
-          </li>
-          <% else %>
-          <li class="nav-item">
-            <a class="nav-link" href="<%= new_user_registration_path%>">Registrarse</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="<%= new_user_session_path%>">Ingresar</a>
-          </li>
-          <% end %>
-        </ul>
-      </div>
-    </nav>
+    <%= render 'layouts/navbar' %>
+    <%= render 'layouts/search' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <div class="m-4">
-      <div class="card text-white bg-dark mb-3">
-        <div class="card-header"> Cotiza tu viaje! </div>
-        <div class="card-body">
-          <h5 class="card-title">Cuentanos sobre tu viaje</h5>
-          <form>
-            <div class="form-row">
-              <div class="col-md-4">
-                <p>Origen</p>
-                <select class="form-control">
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
-              </div>
-              <i class="fas fa-arrow-right fa-2x"></i>
-              <div class="col-md-4">
-                <p>Destino</p>
-                <select class="form-control">
-                  <option selected>Choose...</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
-              </div>
-            </div>
-          </form>
-          <button type="button" class="btn btn-light float-right m-4">¡Vamos Juntos!</button>
-        </div>
-      </div>
+    <div class="px-2">
       <%= yield %>
     </div>
 
