--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,13 +18,16 @@
         <a class="nav-link" href="<%=welcome_tours_path%>"><i class="fas fa-map-marked"></i>Tours</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="<%=scrapbooks_path%>"><i class="fas fa-camera-retro"></i>Scrapbooks</a>
+        <a class="nav-link" href="<%=scrapbooks_path%>"><i class="fas fa-sd-card"></i>Albumes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href=""><i class="fas fa-sd-card"></i>Guarda tus recuerdos</a>
+        <a class="nav-link" href="<%= welcome_album_path%>"><i class="fas fa-camera-retro"></i>Scrapbooks</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="<%=blogs_path%>"><i class="fas fa-book"></i>Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"href="<%=welcome_calculadora_path%>"><i class="fas fa-calculator"></i>Calculadora</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
