--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -18,21 +18,22 @@
       <% end %>
     </div>
   </div>
+  <% @blogs.each do |blog| %>
+      <div class="main-page-blocks">
+        <h2><%= blog.title %></h2>
+        <p><%= blog.ubication %></p>
+        <%= image_tag blog.image.url(:medium) %>
+        <h3><%= blog.create %></h3>
+        <div class="main-page-articles"><%= blog.content %></div>
+      </div>
+          <% if user_signed_in? %>
+          <%= link_to 'Show', blog %>
+          <%= link_to 'Edit', edit_blog_path(blog) %>
+          <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% end %>
+  <br>
 
-        <% @blogs.each do |blog| %>
-            <%= blog.title %>
-            <%= blog.ubication %>
-            <%= image_tag @blog.image.url(:medium) %>
-            <%= blog.content %>
-            <%= blog.create %>
-            <%= link_to 'Show', blog %>
-            <%= link_to 'Edit', edit_blog_path(blog) %>
-            <%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %>
-        <% end %>
-    <br>
-
-    <% if user_signed_in? %>
-      <%= link_to 'New Blog', new_blog_path %>
+      <%= link_to 'Nuevo Blog', new_blog_path %>
     <% end %>
 
   </div>
