--- a/app/views/scrapbooks/show.html.erb
+++ b/app/views/scrapbooks/show.html.erb
@@ -7,52 +7,52 @@
 
 <p>
   <strong>Image1:</strong>
-  <%= @scrapbook.image1 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image2:</strong>
-  <%= @scrapbook.image2 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image3:</strong>
-  <%= @scrapbook.image3 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image4:</strong>
-  <%= @scrapbook.image4 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image5:</strong>
-  <%= @scrapbook.image5 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image6:</strong>
-  <%= @scrapbook.image6 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image7:</strong>
-  <%= @scrapbook.image7 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image8:</strong>
-  <%= @scrapbook.image8 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image9:</strong>
-  <%= @scrapbook.image9 %>
+  <%= @scrapbook.image %>
 </p>
 
 <p>
   <strong>Image10:</strong>
-  <%= @scrapbook.image10 %>
+  <%= @scrapbook.image %>
 </p>
 
 <%= link_to 'Edit', edit_scrapbook_path(@scrapbook) %> |
