--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,15 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+ #contenedor {
+                margin-top: 100px;
+                text-align: center;
+            }
+#canvas {
+    background-color: #ffffff;
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
